--- a/Exercici09.css
+++ b/Exercici09.css
@@ -3,7 +3,7 @@
 */
 @import url('http://fonts.cdnfonts.com/css/liberation-sans');
 body{
-    background-image: url("./backgrounds/fons.png");
+    background-image: url("./backgrounds/Birthday-Cake-.png");
     font-family: 'Liberation Sans';
     line-height: 130%;
     color: #615041;
